[build-system]
requires = [
    "flit_core >=3.2,<4"
]
build-backend = "flit_core.buildapi"

[project]
authors = [
    {name = "James Hodgkinson", email = "james@terminaloutcomes.com"}
]
classifiers = [
    "License :: OSI Approved :: MIT License"
]
dynamic = [
    "version",
    "description"
]

dependencies = [
    "boto3>=1.17.53",
    "requests>=2.26.0",
    "schedule>=1.1.0",
]

keywords = [
    "fail2ban",
    "security",
    "s3",
]
name = "fail2ban_importer"
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pylint",
    "pytest",
    "mypy",
    "boto3-stubs",
    "flit",
    "black",
]

[project.urls]
Home = "https://github.com/yaleman/fail2ban-importer"

[project.scripts]
fail2ban_importer = "fail2ban_importer.__main__:cli"


[tool.flit.sdist]
exclude = [
    "requirements*.txt",
    "*.json",
    "mypy.ini",
    ".gitignore",
    ".pylintrc"
]
