[tool.poetry]
name = "fail2ban-importer"
version = "0.0.9"
description = "Takes banlists and uses fail2ban to block them"
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]
license = "MIT"

readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
pydantic = "^1.9.0"
schedule = "^1.1.0"
boto3 = "^1.21.37"
click = "^8.1.2"

[tool.poetry.dev-dependencies]
pylint-pytest = "^1.1.2"
pytest = "^7.1.2"
black = "^22.3.0"
mypy = "^0.950"
pylint-pydantic = "^0.1.4"
types-requests = "^2.27.29"
boto3-stubs = "^1.23.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]

fail2ban-importer = "fail2ban_importer.__main__:cli"

[tool.pylint.MASTER]
max-line-length = 200
disable = "W0511"
extension-pkg-whitelist = "pydantic"
load-plugins = "pylint_pydantic"
