[project]
name = "fail2ban-importer"
version = "0.0.11"
description = "Takes banlists and uses fail2ban to block them"
readme = "README.md"
authors = [{ name = "James Hodgkinson", email = "james@terminaloutcomes.com" }]
license = "MIT"
requires-python = "<4.0,>=3.10"
dependencies = [
    "requests",
    "pydantic",
    "schedule",
    "boto3",
    "click",
    "pydantic-settings",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
fail2ban-importer = "fail2ban_importer.__main__:cli"

[dependency-groups]
dev = [
    "pylint-pytest",
    "pytest",
    "black",
    "mypy",
    "pylint-pydantic",
    "types-requests",
    "boto3-stubs",
    "ruff",
]


[tool.pylint.MASTER]
max-line-length = 200
disable = "W0511"
extension-pkg-whitelist = "pydantic"
load-plugins = "pylint_pydantic"

[tool.mypy]
plugins = "pydantic.mypy"
